[project]
name = "pie-backend"
version = "0.1.0"
description = "Your project description"
authors = [{ name = "In Gim", email = "in.gim@yale.edu" }]
license = "MIT"
requires-python = ">=3.11"

dependencies = [
    "fire>=0.6",
    "msgpack>=0.5",
    "platformdirs>=4.3",
    "pyzmq>=27.0.0",
    "requests>=2.32",
    "tqdm>=4.67",
    "websockets>=15.0",
    "ztensor>=0.1.4",
    "msgspec>=0.19.0"
]
