[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-cli"
version = "0.2.0"
description = "Pie Command Line Interface"
authors = [{ name = "Pie Team" }]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "toml>=0.10.0",
    "pie-client>=0.1.0",
    "esprima>=4.0.0",
    "blake3>=1.0.4",
]

[project.scripts]
pie-cli = "pie_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
