[package]
name = "picli"
version = "0.2.0"
edition = "2024"
authors = ["Pie Team"]
description = "Programmable Inference Command Line Interface"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[[bin]]
name = "picli"
path = "src/main.rs"

[dependencies]
pie-client = { path = "../rust" }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6.0"
rand = { version = "0.9.2", features = ["std_rng"] }
shellexpand = "3.1"
