[package]
name = "pie-cli"
version = "0.2.0"
edition = "2024"
authors = ["Pie Team"]
description = "Pie Command Line Interface"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[[bin]]
name = "pie-cli"
path = "src/main.rs"

[dependencies]
pie-client = { version = "0.2.0", path = "../rust" }
tokio = { version = "1.38", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
dirs = "6.0"
rand = { version = "0.8" }
shellexpand = "3.1"
base64 = "0.22"
whoami = "1.5"
wac-graph = "0.8"
wac-types = "0.8"
tempfile = "3.14"
regex = "1"
pathdiff = "0.2"
