[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-client"
version = "0.1.0"
description = "A client for interacting with the PIE."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "In Gim", email = "in.gim@yale.edu" },
]

dependencies = [
    "websockets==11.0.3",
    "msgpack==0.5.6",
    "blake3==1.0.4",
]

[project.urls]
Homepage = "https://github.com/pie-project/pie/client/python"

[tool.setuptools]
packages = ["pie"]