[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-client"
version = "0.1.0"
description = "Pie Client"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    { name = "In Gim", email = "in.gim@yale.edu" },
]
dependencies = [
    "websockets==11.0.3",
    "msgpack==0.5.6",
    "blake3==1.0.4",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/pie-project/pie"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pie_client"]
license-files = []