[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pie-client"
version = "0.2.0"
description = "Pie Client"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "In Gim", email = "in.gim@yale.edu" },
]
dependencies = [
    "websockets>=15.0",
    "msgpack>=0.5.6",
    "blake3>=1.0.4",
    "cryptography>=42.0.0",
    "typer>=0.9.0",
    "toml>=0.10.0",
]

[project.scripts]
pie-client = "pie_client_cli.main:app"

[project.urls]
Homepage = "https://github.com/pie-project/pie"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pie_client", "pie_client_cli"]
license-files = []