[package]
name = "pie-client"
version = "0.2.0"
edition = "2024"
authors = ["Pie Team"]
description = "Programmable Inference Engine (Pie) Client"
license = "Apache-2.0"
repository = "https://github.com/pie-project/pie"

[lib]

[dependencies]
anyhow = "1.0.95"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.217", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"
chrono = { version = "0.4", features = ["serde"] }
num-traits = "0.2.19"
bytes = "1.10.1"
blake3 = "1.8.2"
dashmap = "6.1.0"
tokio = { version = "1.45.1", features = ["full"] } # ["full", "tracing"]
tokio-tungstenite = "0.28.0"
futures = "0.3.31"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
