[package]
name = "agent-react-bench"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inferlet.workspace = true
inferlet-macros.workspace = true
futures = "0.3.31"
pico-args = "0.5.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"