[package]
name = "constrained-decoding"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inferlet.workspace = true
inferlet-macros.workspace = true
futures = "0.3.31"
llguidance = { version = "1.1.1", default-features = false, features = ["lark"] }
pico-args = "0.5.0"
fancy-regex = "0.15.0"
base64 = "0.22.1"
anyhow = "1.0.98"