[package]
name = "text-completion-inferlib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
inferlet.workspace = true
inferlet-macros.workspace = true
inferlib-chat-bindings = { path = "../../inferlib/chat-bindings" }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
