[package]
name = "inferlet"
version = "0.1.0"
edition = "2024"
authors = ["In Gim <in.gim@yale.edu>"]
description = "Inferlet support library for PIE"
license = "MIT"
repository = "https://github.com/pie-project/pie/inferlet"

[dependencies]
wit-bindgen.workspace = true
wstd = "0.5.3"
trait-variant = "0.1.2"
wasi = "0.14.2+wasi-0.2.4"
num-traits = "0.2.19"
inferlet-macros = { path = "../inferlet-macros" }
anyhow = "1.0.95"